2009-12-23  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Put extendio menues into "var/glassui".
	Add entry for Extendio.
	Remove repeated entries - class structure is traversed now.

2009-12-22  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Use TringuRep as primary/only representation of Tringula.
	Add buttons to switch shadows and flat/smooth shading to
	terrain-control menu.
	Increase initial pupil window size to 1024x768.

2009-12-16  Matevz Tadel  <matevz.tadel@ijs.si>

	* sounds:
	* sounds/big_explosion.wav:
	New dir/file.

	* tringula.C:
	Add al-buffer for explosion.
	Add overlay button to initiate crawler explosion.

2009-12-07  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Crate AL-source for crawler gun.

2009-12-04  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Instantiate AL context, listener, some buffers and source for
	CrawlerSpiritio.
	Remove some obsolete code / comments.

2009-11-28  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Explicitly rotate tringu-observer's camera downwards at creation
	time.

2009-11-27  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Changes needed for new TringuCam / Spiritio stuff.

2009-11-22  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Changes for Spiritio handling. So far only activated in test mode.
	Only very basic functionality - controls work but the Crawlers do
	not obey them.

2009-06-21  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Set min/max fov of the pupil.

2009-04-19  Matevz Tadel  <matevz.tadel@ijs.si>

	Basic support for land-mark management and rendering.

	* tringula.C:
	Generate land-mark mesh.
	Add Test-Menu (entries "Rnd Statos", "New LandMark").
	Add LandMark sub-menu.

2009-04-14  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Add new test mode 9 - for a larger planet.

2009-02-08  Matevz Tadel  <matevz.tadel@ijs.si>

	* tringula.C:
	Set max-flyer-h and max-camera-h for all terrain topologies.
